--- a/register.html
+++ b/register.html
@@ -11,7 +11,8 @@
 <body>
     <!-- Script 10.6 - register.html -->
     <form action="#" method="post" id="theForm">
-        <fieldset><legend>Register</legend>
+        <fieldset>
+            <legend>Register</legend>
 			<p>All fields are required.</p>
 			<div class="two"><label for="firstName">First Name</label><input type="text" name="firstName" id="firstName" required></div>
 			<div class="two"><label for="lastName">Last Name</label><input type="text" name="lastName" id="lastName" required></div>
